deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: mi-prueba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      serviceAccountName: helloworld
      automountServiceAccountToken: false
      containers:
        - name: helloworld
          image: adejonge/helloworld:latest
          imagePullPolicy: "Always"
          ports:
          - name: monitoring
            containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: monitoring
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: monitoring
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 10m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            #readOnlyRootFilesystem: true
            runAsUser: 65534
            runAsGroup: 65534
            runAsNonRoot: true
