service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: mi-prueba
spec:
  selector: 
    app: helloworld
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
