ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: mi-prueba
spec:
  rules:
  - host: helloworld.roldyx.duckdns.org
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 8080
